--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     
     <link rel="icon" href="images/incisive_favicon.jpg">
 
-    <link rel="stylesheet" href="https://gitcdn.link/cdn/bachtses/Chest_X-Ray_Medical_Report_Web_App/main/styles.css"> 
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/bachtses/Chest_X-Ray_Medical_Report_Web_App/master/styles.css"> 
+        
     <!--<link rel="stylesheet" href="styles.css">-->
  
 </head>
